apps/nextcloud/templates/httproute-collabora.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-collabora
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - collabora.meyeringh.org
  rules:
    - backendRefs:
        - name: nextcloud-collabora
          port: 9980
