apps/nextcloud/templates/httproute-wellknown.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-wellknown
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - cloud.meyeringh.org
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/carddav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 301
    - matches:
        - path:
            type: Exact
            value: /.well-known/caldav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 301
